Fix for pagination numbers not visible

--- a/Theme.scss
+++ b/Theme.scss
@@ -1938,6 +1938,11 @@ a.card.bg-gray-light:hover,
     background: $MainContentBackgroundColor !important;
 }
 
+.pagination .gap,
+.pagination a:not(.next_page):not(.previous_page) {
+    color: white !important;
+}
+
 @media all {
     .page-responsive .pagehead,
     .reponav-wrapper {
@@ -4041,7 +4046,6 @@ a.text-gray-light {
 .site-footer .octicon-mark-github,
 .select-menu-header .octicon,
 .steps li,
-.pagination .gap,
 .octicon-btn.disabled,
 .octicon-btn.disabled:hover,
 .branch-delete.disabled,
